--- a/src/css/other/fragmentary.css
+++ b/src/css/other/fragmentary.css
@@ -2412,12 +2412,95 @@ header .remind{
 	background: #fff;
 }
 .manageInfo .screenMain .screenSearch{
-	height: 0.56rem;
-	padding-bottom: 0.14rem;
-	border-bottom: 0.02rem solid #f4f5f7;
+	height: auto;
+	overflow: hidden;
 }
+.screenMain .screenSearch input{
+	width: 5.64rem;
+	height: 0.56rem;
+	line-height: 0.56rem;
+	background: #f4f5f7;
+	border:none;
+	font-size: 0.26rem;
+	float: left;
+	margin:0.17rem 0 0.14rem 0.22rem;
+	padding:0 0.16rem;
+}
+.screenMain .screenSearch a{
+	display: block;
+	height: auto;
+	overflow: hidden;
+	float: right;
+	margin:0.3rem 0.22rem 0 0;
+	font-size: 0.26rem;
+	color:#444;
+}
+.screenMain .screenSearch a em{
+	width: 0.24rem;
+	height: 0.23rem;
+	display: inline-block;
+	float: left;
+	background: url(../../images/threeLevel/shaiIcon.png) no-repeat;
+	background-size: 100%;
+	margin:0.05rem 0.03rem 0 0;
+}
+.screenMain .screenSearch a span{
+	display: inline-block;
+	float: left;
+}
+.screenMain .screenList{
+	height: auto;
+	overflow: hidden;
+	margin:0 0.22rem;
 
-
+}
+.screenMain .screenList a{
+	height: auto;
+	overflow: hidden;
+	display: block;
+	border-bottom: 0.02rem solid #f4f5f7;
+	padding:0.1rem 0 0.17rem 0;
+	position: relative;
+	margin:0.1rem 0 0.15rem 0;
+}
+.screenMain .screenList a .listHead{
+	width: 1.37rem;
+	height: 1.37rem;
+	float: left;
+	overflow: hidden;
+	border-radius: 50%;
+	
+}
+.screenMain .screenList a .listHead img{
+	width: 100%;
+}
+.screenMain .screenList a .listHead em{
+	width: 0.36rem;
+	height: 0.36rem;
+	display: block;
+	position: absolute;
+	left: 0.94rem;
+	top: 1.1rem;
+	background: url(../../images/threeLevel/xingIcon.png) no-repeat;
+	background-size: 100%;
+}
+.screenMain .screenList a .listName{
+	width: 5.02rem;
+	height: auto;
+	overflow: hidden;
+	float: left;
+	margin-left: 0.22rem;
+}
+.screenMain .screenList a .listName span{
+	display: block;
+	font-size: 0.28rem;
+	color:#444;
+	margin:0.22rem 0 0.18rem 0;
+}
+.screenMain .screenList a .listName em{
+	font-size: 0.22rem;
+	color:#666;
+}
 
 
 
