--- a/src/css/other/secondLevel.css
+++ b/src/css/other/secondLevel.css
@@ -54,7 +54,7 @@
 	margin:0.33rem 0.1rem 0 0;
 	background:url(../../images/secondLevel/strictIcon.png) no-repeat;
 	background-size:100%;
-} 
+}
 .advantage span em.afterSale{
 	width:0.27rem;
 	height:0.27rem;
@@ -63,7 +63,7 @@
 	margin:0.33rem 0.1rem 0 0;
 	background:url(../../images/secondLevel/afterSale.png) no-repeat;
 	background-size:100%;
-} 
+}
 .recommendation{
 	height:auto;
 	overflow:hidden;
@@ -318,9 +318,9 @@
 	display:block;
 	margin:0 auto 0.15rem;
 	border-radius:0.06rem;
-	-webkit-box-shadow:0 0 0.2rem #c8c8c8;  
-    -moz-box-shadow:0 0 0.2rem #c8c8c8;  
-    box-shadow:0 0 0.2rem #c8c8c8; 
+	-webkit-box-shadow:0 0 0.2rem #c8c8c8;
+    -moz-box-shadow:0 0 0.2rem #c8c8c8;
+    box-shadow:0 0 0.2rem #c8c8c8;
 	position:relative;
 }
 .tenMain li .hotLabel{
@@ -437,9 +437,9 @@
 	height:auto;
 	margin:0 auto 0.15rem;
 	display:block;
-	-webkit-box-shadow:0 0 0.2rem #c8c8c8;  
-    -moz-box-shadow:0 0 0.2rem #c8c8c8;  
-    box-shadow:0 0 0.2rem #c8c8c8; 
+	-webkit-box-shadow:0 0 0.2rem #c8c8c8;
+    -moz-box-shadow:0 0 0.2rem #c8c8c8;
+    box-shadow:0 0 0.2rem #c8c8c8;
 	background:#fff;
 }
 .growGrassMain a .picInfo{
@@ -561,18 +561,18 @@
     width: 0;
     height: 0;
     transform:rotate(270deg);
-	-ms-transform:rotate(270deg); 	
-	-moz-transform:rotate(270deg); 
-	-webkit-transform:rotate(270deg); 
-	-o-transform:rotate(270deg); 
+	-ms-transform:rotate(270deg);
+	-moz-transform:rotate(270deg);
+	-webkit-transform:rotate(270deg);
+	-o-transform:rotate(270deg);
 }
 .searchListMain .sortIcon em:last-child{
 	transform:rotate(90deg);
-	-ms-transform:rotate(90deg); 	
-	-moz-transform:rotate(90deg); 
-	-webkit-transform:rotate(90deg); 
+	-ms-transform:rotate(90deg);
+	-moz-transform:rotate(90deg);
+	-webkit-transform:rotate(90deg);
 	-o-transform:rotate(90deg);
-	margin-top: 0.05rem; 
+	margin-top: 0.05rem;
 }
 .searchListMain .sortIcon em.Cur{
 	border-left: 0.08rem solid #000;
@@ -634,7 +634,7 @@ header .classifiSearch input{
 }
 .classifiMain{
  	height: auto;
- 	overflow:hidden;   
+ 	overflow:hidden;
 }
 .classifiMain .classifiContent{
 	width: 100%;
@@ -650,7 +650,7 @@ header .classifiSearch input{
 	position: fixed;
 	left:0;
 	top:0.9rem;
-} 
+}
 .classifiContent .classifiLeft a{
 	width:100%;
 	height: 0.9rem;
@@ -707,7 +707,7 @@ header .classifiSearch input{
 	display: block;
 	height: 1.7rem;
 	width:1.24rem;
-	text-align:center; 
+	text-align:center;
 	overflow:hidden;
 	float: left;
 	margin:0 0 0.3rem 0.58rem;
@@ -904,7 +904,7 @@ header .classifiSearch input{
 	height: auto;
 	overflow: hidden;
 	float: left;
-} 
+}
 .orderDetail .detailRight .rightTop{
 	height: auto;
 	overflow: hidden;
@@ -1013,7 +1013,7 @@ header .classifiSearch input{
 	background: url(../../images/secondLevel/conInto.png) no-repeat;
 	background-size: 100%;
 	float: right;
-	margin:0.3rem 0 0 0.1rem; 
+	margin:0.3rem 0 0 0.1rem;
 }
 .preferential .offset{
 	height: 0.8rem;
@@ -1059,6 +1059,7 @@ header .classifiSearch input{
 	-webkit-box-shadow: 0 0 0.25rem #d3d4d7;
     -moz-box-shadow: 0 0 0.25rem #d3d4d7;
     box-shadow: 0 0 0.25rem #d3d4d7;
+  z-index: 999;
 }
 .placeOrderMain .settlement .setTitle{
 	font-size: 0.28rem;
