--- a/src/css/other/index.css
+++ b/src/css/other/index.css
@@ -83,7 +83,7 @@ header .message em{
 	display: inline-block;
 	float: left;
 }
-.addr .cityCode .triangle{
+.addr .cityCode >>> .triangle{
 	width:0.12rem;
 	height: 0.1rem;
 	display: inline-block;
@@ -546,7 +546,7 @@ header .message em{
 	margin-top:-0.15rem;
 }
 .secKill .secKillMain .bursNav{
-	width: 2rem !important; 
+	width: 2rem !important;
 	height: 0.65rem;
 	line-height:0.65rem;
 	text-align: center;
@@ -556,7 +556,7 @@ header .message em{
 	color:#666;
 }
 .secKill .secKillMain .burCur{
-	width: 1.5rem !important; 
+	width: 1.5rem !important;
 	height: 0.65rem;
 	line-height:0.65rem;
 	border-bottom: 0.02rem solid #ecbc68;
@@ -757,7 +757,7 @@ header .message em{
 }
 .infoHead .infoHeadLeft .headName{
 	float: left;
-}	
+}
 .infoHeadLeft .headName p{
 	font-size:0.3rem;
 	color:#262626;
@@ -984,7 +984,7 @@ header .message em{
 	height: 4.72rem;
 	background:url(../../images/index/personalBg.jpg) no-repeat;
 	background-size: 100%;
-	
+
 }
 .personalInfo .personalHead{
 	width:1.58rem;
@@ -1140,7 +1140,7 @@ header .message em{
 }
 .topicMain .tabList{
 	padding-bottom: 1.2rem;
-} 
+}
 .topicMain .topicDetail{
 	position: relative;
 }
@@ -1472,7 +1472,7 @@ header .message em{
 }
 .lookOtherTitle span{
 	font-size:0.32rem;
-	color:#444;	
+	color:#444;
 	text-align: center;
 	width:100%;
 	display: inline-block;
@@ -1521,7 +1521,7 @@ header .message em{
 		margin:0.17rem 0 0 0 !important;
 	}
 }
-@media (min-device-width : 375px) and (max-device-width : 667px) and (-webkit-min-device-pixel-ratio : 2){ 
+@media (min-device-width : 375px) and (max-device-width : 667px) and (-webkit-min-device-pixel-ratio : 2){
   	.addr{
   		height: 46px !important;
   		line-height: 46px !important;
@@ -1534,7 +1534,7 @@ header .message em{
 		padding-top: 5px;
 	}
 }
-@media (min-device-width : 414px) and (max-device-width : 736px) and (-webkit-min-device-pixel-ratio : 3){ 
+@media (min-device-width : 414px) and (max-device-width : 736px) and (-webkit-min-device-pixel-ratio : 3){
 	.addr{
   		height: 50px !important;
   		line-height: 50px !important;
