--- a/src/css/other/personalCenter.css
+++ b/src/css/other/personalCenter.css
@@ -889,7 +889,7 @@ header .setUpIcon{
 }
 .memberCenterMain .carouseContent{
 	width: 7.5rem;
-	margin:0 0 0 0.09rem;
+	margin:-0.01rem 0 0 0.09rem;
 }
 .carouselBtn ul li{
 	width: 0.37rem;
