--- a/src/css/other/threeLevel.css
+++ b/src/css/other/threeLevel.css
@@ -110,6 +110,7 @@
 }
 .popularMain .banner img{
 	width:100%;
+	height: 100%;
 	display: block;
 	margin:0 auto;
 }
@@ -136,7 +137,8 @@
     top:2.75rem;
 }
 .introduceTitle .introduceLogo img{
-	max-width: 100%;
+	width: 100%;
+	height: 100%;
 	display: block;
 	margin:auto auto;
 }
@@ -206,8 +208,10 @@
 	width: 7.5rem;
 	height: 5.84rem;
 	overflow:hidden;
-	background:url(../../images/threelevel/recommendImg.jpg) no-repeat;
-	background-size: 100%;
+}
+.catcherRecommend .catcherHead img{
+	width:100%;
+	height: 100%;
 }
 .catcherRecommend .mainText{
 	height: auto;
@@ -235,6 +239,7 @@
 }
 .mainText .author .authorLeft img{
 	width: 100%;
+	height: 100%;
 	border-radius: 50%;
 }
 .mainText .author .authorRight{
@@ -263,7 +268,8 @@
 	margin-bottom: 0.4rem;
 }
 .mainText .textInfo img{
-	max-width:100%;
+	width:100%;
+	height: 100%;
 	display: block;
 	margin:0 auto 0.4rem;
 }
@@ -966,6 +972,7 @@
 	background: #fff;
 }
 .choiceGoods .goodsPrice .goodsPLeft img{
+	width:100%;
 	height: 100%;
 	display: block;
 	margin:0 auto;
