--- a/src/css/other/personalCenter.css
+++ b/src/css/other/personalCenter.css
@@ -103,7 +103,7 @@
 /*X币 结束*/
 /*兑换X币 开始*/
 .exchangeMain{
-	
+
 }
 .exchangeMain .exchangeNav,
 .collectionMain .collectionNav{
@@ -172,7 +172,7 @@
 .contInfo .exchangeMoney .available{
 	height: auto;
 	overflow: hidden;
-	margin:0.4rem 0.23rem 0; 
+	margin:0.4rem 0.23rem 0;
 	font-size:0.27rem;
 	color:#666;
 }
@@ -648,7 +648,7 @@ header .setUpIcon{
 	width:7.5rem;
 	height: 2.96rem;
 	background: url(../../images/secondLevel/personalBg.png) no-repeat;
-	background-size:100%; 
+	background-size:100%;
 }
 .personalMain .accountName{
 	width: 6.94rem;
@@ -702,7 +702,7 @@ header .setUpIcon{
 	height: 0.4rem;
 	line-height: 0.4rem;
 	text-align: center;
-	display: block;	
+	display: block;
 	float: left;
 	font-size: 0.24rem;
 	color:#fff;
@@ -814,9 +814,9 @@ header .setUpIcon{
 	height: 1.46rem;
 	overflow: hidden;
 	display: block;
-	margin:0.4rem auto 0; 
+	margin:0.4rem auto 0;
 	background: url(../../images/threeLevel/memberNameBg.png) no-repeat;
-	background-size: 100%;	
+	background-size: 100%;
 }
 .memberInfo .memberName .memberNameLeft{
 	float: left;
@@ -1212,7 +1212,7 @@ header .setUpIcon{
 }
 .helpService .helpFooter{
 	width: 7.5rem;
-	height: 0.98rem;	
+	height: 0.98rem;
 	background:#fff;
 	position: fixed;
 	bottom: 0;
@@ -1474,7 +1474,7 @@ header .setUpIcon{
 /*我的订单 开始*/
 .myOrderMain{
 	width:100%;
-	position: absolute;
+	/*position: absolute;*/
 	top:0.9rem;
 }
 .orderOption .optionNav{
@@ -1542,7 +1542,7 @@ header .setUpIcon{
 	margin:0.4rem 0 1.3rem 0;
 }
 .optionCont .optionMain{
-	display: none;
+	/*display: none;*/
 }
 .optionCont .opContInfo{
 	display: block;
@@ -1819,7 +1819,7 @@ header .setUpIcon{
 	height: auto;
 	overflow: hidden;
 	float: left;
-} 
+}
 .commodDetail .detailRight .rightTop{
 	height: auto;
 	overflow: hidden;
@@ -2031,7 +2031,7 @@ header .setUpIcon{
 /*订单详情 结束*/
 
 /*选择服务类型 开始*/
-.selectTypeMain{ 
+.selectTypeMain{
 	height: auto;
 	overflow: hidden;
 }
@@ -2071,6 +2071,9 @@ header .setUpIcon{
 	margin-bottom: 0.2rem;
 }
 .refundMain a .refundmRight{
+	float: right;
+}
+.refundMain a .refundmRight em{
 	width: 0.14rem;
 	height: 0.25rem;
 	display: inline-block;
@@ -2078,13 +2081,137 @@ header .setUpIcon{
 	background:url(../../images/secondLevel/conInto.png) no-repeat;
 	background-size: 100%;
 	margin-top: 0.44rem;
-} 
-
-
-
-
-
-
+}
+.refundMain a .pleSel{
+	font-size: 0.24rem;
+	color:#8d8d8d;
+	display: inline-block;
+	margin: 0.18rem 0.1rem 0 0;
+}
+.refundMain .refundAmount{
+	width: 100%;
+	float: left;
+	height: auto;
+	overflow: hidden;
+}
+.refundMain .refundAmount h5{
+	color:#444;
+	font-size: 0.24rem;
+	margin:0.22rem 0;
+	display: inline-block;
+	float: left;
+}
+.refundMain .refundAmount span{
+	display:inline-block;
+	float: left;
+	margin:0.22rem 0;
+	color:#f5500e;
+	font-size: 0.18rem;
+}
+.refundMain .refundAmount span em{
+	font-size: 0.26rem;
+}
+.selectTypeMain .mostRefunds{
+	height: 0.58rem;
+	line-height: 0.58rem;
+	font-size: 0.18rem;
+	padding:0 0.3rem;
+	color:#969696;
+}
+.selectTypeMain .refundsExplain{
+	height: 1.6rem;
+	overflow: hidden;
+	background: #fff;
+	padding:0.2rem 0 0.4rem 0;
+}
+.selectTypeMain .refundsExplain .explainTitle{
+	width: 1.3rem;
+	color:#444;
+	font-size: 0.24rem;
+	float: left;
+	margin-left: 0.3rem;
+}
+.selectTypeMain .refundsExplain textarea{
+	width: 5.46rem;
+	height: 1.5rem;
+	font-size: 0.24rem;
+	float: left;
+	display: block;
+	overflow: hidden;
+	padding:0.05rem;
+	border:none;
+}
+.selectTypeMain .submissionBtn a{
+	width: 100%;
+	height: 0.98rem;
+	line-height: 0.98rem;
+	color:#fff;
+	text-align: center;
+	display: block;
+	background:#ecbc68;
+	font-size: 0.36rem;
+	position: fixed;
+	left: 0;
+	bottom: 0;
+}
+.elasticBox .textTitle {
+    height: 1.04rem;
+    line-height: 1.04rem;
+    border-bottom: 0.02rem solid #f4f5f7;
+    text-align: center;
+    font-size: 0.32rem;
+    color: #444;
+    font-weight: bolder;
+    position: relative;
+    margin:0 0.23rem 0.2rem;
+}
+.elasticBox .textTitle .closeBtn{
+    width: 0.23rem;
+    height: 0.23rem;
+    display: inline-block;
+    background: url(../../images/common/closeIcon.png) no-repeat;
+    background-size: 100%;
+    position: absolute;
+    right: 0;
+    top: 0.4rem;
+    z-index: 100;
+}
+.elasticBox .refundPick{
+	margin:0 0.23rem;
+}
+.elasticBox .refundPick li{
+	height: auto;
+	overflow: hidden;
+	font-size: 0.26rem;
+	color:#7b7b7b;
+	padding-bottom: 0.15rem;
+	margin-bottom: 0.2rem;
+	border-bottom: 0.02rem solid #f4f5f7;
+}
+.elasticBox .refundPick li span{
+	width:6rem;
+	display: inline-block;
+	float: left;
+}
+.elasticBox .refundPick li em,
+.elasticBox .refundPick li em.Cur{
+	width: 0.44rem;
+    height: 0.44rem;
+    overflow: hidden;
+    display: inline-block;
+    float: right;
+    background: url(../../images/common/shappChoice.png) no-repeat 0 0;
+    background-size: 100%;
+}
+.elasticBox .refundPick li em.Cur{
+	background: url(../../images/common/shappChoice.png) no-repeat 0 -0.66rem;
+    background-size: 100%;
+}
+.elasticBox .boxContent .reasonInfo,
+.elasticBox .boxContent .stateInfo,
+.elasticBox .boxContent .exchangeInfo{
+	display: none;
+}
 
 
 
